--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -5,6 +5,7 @@
 @import url('./__like-button/card__like-container.css');
 @import url('./__like-button/card__like-counter.css');
 @import url('./__delete-button/card__delete-button.css');
+@import url('./__delete-button/card__delete-button_disabled.css');
 @import url('./__title/card__title.css');
 
 .card {
