--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -20,3 +20,19 @@
     margin-right: 0;
   }
 }
+
+.profile__image:hover::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  background-color: #000000;
+  background-image: url('../../../images/icon-edit-avatar.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.8;
+  cursor: pointer;
+}
